[metadata]
name = envcheck-dyspop
version = 0.0.1
author = Dan Black
author_email = dyspop@gmail.com
description = A small, simple command line utility to check for, compare and merge environment variables between environment files and their .example counterparts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/envcheck
project_urls =
    Bug Tracker = https://github.com/dyspop/envheck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
