[metadata]
name = envcheck
version = 0.0.3
author = Dan Black
author_email = dyspop@gmail.com
description = A small, simple command line utility to check for, compare and merge environment variables between environment files and their .example counterparts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dyspop/envcheck
project_urls =
    Bug Tracker = https://github.com/dyspop/envheck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    envcheck = envcheck:main
